testing/macro-tests/tests/ui/store_heap_memory_ids_reserved.stderr
error: storage(heap(...)) is reserved for a future release; use storage(stable(...))
  --> tests/ui/store_heap_memory_ids_reserved.rs:10:13
   |
10 |     storage(heap(
   |             ^^^^
